fix(table): fix table too wide
fix #9

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -93,6 +93,10 @@ a {
   transition: cubic-bezier(0.39, 0.575, 0.565, 1) 0.2s;
 }
 
+.table-wrapper {
+  overflow-x: auto;
+}
+
 @media print {
 
   html,
